Almost done desktop version (except filter's function)

--- a/public/styles.css
+++ b/public/styles.css
@@ -7,42 +7,119 @@
     --dark-grayish-cyan: hsl(180, 8%, 52%);
     --very-dark-grayish-cyan: hsl(180, 14%, 20%);
 }
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
 
 body {
     font-family: 'Spartan', sans-serif;
     font-size: 15px;
-    color:var(--very-dark-grayish-cyan);
-    height:100%;
+    color: var(--very-dark-grayish-cyan);
+    height: 100%;
+    width: 100%;
+    background: var(--lighter-grayish-cyan);
+}
+.header{
+    width: 100%;
+    height: 156px;
+    background: var(--desaturated-dark-cyan) url("./images/bg-header-desktop.svg") no-repeat;
+}
+.main{
+    max-width:1100px; 
+    margin: -30px auto 100px; 
+}
+#filter{
     width:100%;
-    background: var( --lighter-grayish-cyan);
+    height:72px;
+    background:white ;
+    display:flex;
+    align-items: center;
+}
+.card {
+    background: white;
+    width: 100%;
+    height: 152px;
+    margin: 10px 0;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.cardContainer {
-    background: white;
-    width: auto;
-    height: 300px;
-    margin: 10px;
+.top {
+    display: grid;
+    grid-template-columns: 115px 1fr;
+    grid-template-rows: repeat(3,1fr);
+    align-items: self-end;
+    /* align-items: center;
+    width: 50%; */
 }
-.stamp{
-    color:white;
+
+.top img {
+    width: 88px;
+    height: 88px;
+    grid-column: 1;
+    grid-row: 1/4;
+}
+/* .description{
+    margin:0 25px;
+} */
+.cardHeader {
+    display: flex;
+    align-items: center;
+}
+.name{
+    color:var(--desaturated-dark-cyan);
+    font-weight: 700;
+    
+}
+.stamp {
+    color: white;
     font-size: 10px;
     text-transform: uppercase;
-    width:fit-content;
-    padding:6px 8px;
+    width: fit-content;
+    padding: 6px 8px;
     border-radius: 10px;
     font-weight: 700;
     text-align: center;
 }
-.new{
+
+.new {
     background: var(--desaturated-dark-cyan);
- }
- .featured{
-    background: var(--very-dark-grayish-cyan);
- }
-.hide{
-    display: none;;
 }
-.sub{
-    color:var( --dark-grayish-cyan);
-    font-size: 10px;
+
+.featured {
+    background: var(--very-dark-grayish-cyan);
+}
+
+.hide {
+    display: none;
+}
+
+.sub {
+    color: var( --dark-grayish-cyan);
+    font-size: 13px;
+}
+
+.bottom {
+    display: flex;
+    align-items: center;
+}
+
+.smallCard {
+    background: var(--lighter-grayish-cyan);
+    font-size: 13px;
+    width: fit-content;
+    height: fit-content;
+    padding: 8px;
+    margin: 0 5px;
+    color: var( --desaturated-dark-cyan);
+    font-weight: 700;
+}
+.remove{
+    background:var(--desaturated-dark-cyan);
+    width:auto;
+    height:100%;
 }
