--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+/* ---------------------------- */
+/* ----------- Common ----------*/
+/* ---------------------------- */
+
 :root {
     --desaturated-dark-cyan: hsl(180, 29%, 50%);
     /* (Background) */
@@ -30,27 +34,62 @@ body {
 }
 
 .main {
-    max-width: 1100px;
-    margin: -30px auto 100px;
+    max-width: 1110px;
+    margin: 0 auto 100px;
+    position:relative;
 }
 
-#filter {
-    width: 100%;
-    height: 72px;
-    background: white;
-    display: flex;
-    align-items: center;
-}
-
-.card {
+.filter, .card {
+    border-radius: 5px;
     background: white;
     width: 100%;
-    height: 152px;
-    margin: 10px 0;
-    padding: 20px;
     display: flex;
     justify-content: space-between;
+}
+
+.hide {
+    display: none;
+}
+
+/* ---------------------------- */
+/* ---------- Filter ---------- */
+/* ---------------------------- */
+
+.filter {
+    height: 72px;
     align-items: center;
+    padding: 0 40px;
+    position:absolute;
+    top: -35px;
+}
+.selectedCriteria {
+    display: flex;
+}
+.clear {
+    border-bottom: var(--desaturated-dark-cyan) solid 1px;
+    cursor: pointer;
+    font-size: 12px;
+    text-align: end;
+}
+
+/* ---------------------------- */
+/* ----------- Card ----------- */
+/* ---------------------------- */
+
+.card {
+    height: 152px;
+    margin-bottom: 25px;
+    padding: 20px;
+    align-items: center;
+}
+
+.cardsContainer{
+    position:absolute;
+    top: 80px;
+    width:100%;
+}
+.featuredCard{
+    border-left:var(--desaturated-dark-cyan) solid 5px ;
 }
 
 .top {
@@ -78,7 +117,7 @@ body {
     align-items: center;
 }
 
-.name {
+.name, .smallCard, .clear {
     color: var(--desaturated-dark-cyan);
     font-weight: 700;
 }
@@ -102,10 +141,6 @@ body {
     background: var(--very-dark-grayish-cyan);
 }
 
-.hide {
-    display: none;
-}
-
 h3:hover {
     color: var(--desaturated-dark-cyan);
     cursor: pointer;
@@ -123,30 +158,30 @@ h3:hover {
 
 .smallCardContainer {
     display: flex;
-    margin: 0 6px;
+    margin-right: 16px;
+    border-radius: 5px;
+    background: var(--lighter-grayish-cyan);
 }
 
 .smallCard {
-    background: var(--lighter-grayish-cyan);
     font-size: 13px;
     width: fit-content;
     height: fit-content;
     padding: 8px;
-    margin-left: 5px;
-    color: var( --desaturated-dark-cyan);
-    font-weight: 700;
 }
 
 .bottom .smallCard:hover {
     color: white;
+}
+.bottom .smallCardContainer:hover{
     background: var(--desaturated-dark-cyan);
     cursor: pointer;
 }
-
 .remove {
     background: var(--desaturated-dark-cyan);
     width: auto;
-    padding: 7px;
+    padding: 7px 9px;
+    border-radius: 0 5px 5px 0;
 }
 
 .remove:hover {
