--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,7 @@
 /* ---------------------------- */
+
 /* ----------- Common ----------*/
+
 /* ---------------------------- */
 
 :root {
@@ -36,7 +38,7 @@ body {
 .main {
     max-width: 1110px;
     margin: 0 auto 100px;
-    position:relative;
+    position: relative;
 }
 
 .filter, .card {
@@ -52,53 +54,64 @@ body {
 }
 
 /* ---------------------------- */
+
 /* ---------- Filter ---------- */
+
 /* ---------------------------- */
 
 .filter {
     height: 72px;
     align-items: center;
     padding: 0 40px;
-    position:absolute;
+    position: absolute;
     top: -35px;
 }
+
 .selectedCriteria {
     display: flex;
 }
+
 .clear {
-    border-bottom: var(--desaturated-dark-cyan) solid 1px;
-    cursor: pointer;
     font-size: 12px;
+    font-weight: 700;
+    color: var( --dark-grayish-cyan);
     text-align: end;
+}
+.clear:hover{
+    border-bottom: var(--desaturated-dark-cyan) solid 1px;
+    color: var(--desaturated-dark-cyan);
+    cursor: pointer;
 }
 
 /* ---------------------------- */
 /* ----------- Card ----------- */
+
 /* ---------------------------- */
 
 .card {
     height: 152px;
     margin-bottom: 25px;
-    padding: 20px;
+    padding-left: 40px;
+    padding-right: 20px;
     align-items: center;
 }
 
-.cardsContainer{
-    position:absolute;
+.cardsContainer {
+    position: absolute;
     top: 80px;
-    width:100%;
+    width: 100%;
 }
-.featuredCard{
-    border-left:var(--desaturated-dark-cyan) solid 5px ;
+
+.featuredCard {
+    border-left: var(--desaturated-dark-cyan) solid 5px;
+    padding-left: 35px;
 }
 
 .top {
     display: grid;
-    grid-template-columns: 115px 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    align-items: self-end;
-    /* align-items: center;
-    width: 50%; */
+    grid-template-columns: 112px 1fr;
+    grid-template-rows: 25px 1fr 20px;
+    align-items: center;
 }
 
 .top img {
@@ -108,33 +121,35 @@ body {
     grid-row: 1/4;
 }
 
-/* .description{
-    margin:0 25px;
-} */
-
 .cardHeader {
     display: flex;
     align-items: center;
 }
 
-.name, .smallCard, .clear {
+.name, .smallCard {
     color: var(--desaturated-dark-cyan);
     font-weight: 700;
 }
 
+.name {
+    font-size: 14px;
+}
+
 .stamp {
     color: white;
-    font-size: 10px;
+    font-size: 11px;
     text-transform: uppercase;
     width: fit-content;
-    padding: 6px 8px;
-    border-radius: 10px;
+    padding: 8px 8px 4px;
+    border-radius: 13px;
     font-weight: 700;
     text-align: center;
 }
 
 .new {
     background: var(--desaturated-dark-cyan);
+    margin-left: 17px;
+    margin-right: 8px;
 }
 
 .featured {
@@ -148,7 +163,12 @@ h3:hover {
 
 .sub {
     color: var( --dark-grayish-cyan);
-    font-size: 13px;
+    font-size: 15px;
+}
+
+.sub span {
+    font-weight: 700;
+    margin: 0 15px;
 }
 
 .bottom {
@@ -173,10 +193,12 @@ h3:hover {
 .bottom .smallCard:hover {
     color: white;
 }
-.bottom .smallCardContainer:hover{
+
+.bottom .smallCardContainer:hover {
     background: var(--desaturated-dark-cyan);
     cursor: pointer;
 }
+
 .remove {
     background: var(--desaturated-dark-cyan);
     width: auto;
@@ -187,4 +209,135 @@ h3:hover {
 .remove:hover {
     background: var(--very-dark-grayish-cyan);
     cursor: pointer;
+}
+@media only screen and (max-width: 900px) {
+    .main, .filter,.cardsContainer{
+        position:unset;
+    }
+    .main{
+        max-width:600px;
+    }
+    .filter{
+        height: fit-content;
+        padding:20px 20px 10px;
+        margin:-30px 0 30px;
+    }
+    .selectedCriteria{
+        flex-wrap: wrap;
+    }
+    .smallCardContainer{
+        margin-bottom: 10px;
+    }
+    .cardsContainer{
+       margin-top:60px;
+    }
+    .card{
+        height: 200px;
+        flex-direction: column;
+        padding: 25px;
+        margin-bottom: 40px;
+        align-items: start;
+    }
+    .featuredCard{
+        padding-left:20px;
+    }
+    .top {
+        grid-template-columns: 1fr;
+        grid-template-rows: 48px 42px 22px 44px;
+        align-items: center;
+        width: 100%;
+        margin-top:-50px;
+    }
+    
+    .top img {
+        width: 48px;
+        height: 48px;
+        grid-row: 1;
+    }
+    .name{
+        font-size: 13px;
+    }
+    h3{
+        font-size: 1em;
+    }
+    hr{
+        border:0;
+        border-top:var( --dark-grayish-cyan) solid 0.8px;
+        width:100%;
+    }
+    .bottom{
+        flex-wrap: wrap;
+        height:80px;
+    }
+    .sub{
+        font-size: 13px;
+    }
+    .sub span{
+        margin: 0 7px;
+    }
+}
+@media only screen and (max-width: 375px) {
+    .main, .filter,.cardsContainer{
+        position:unset;
+    }
+    .main{
+        max-width:328px;
+    }
+    .filter{
+        height: fit-content;
+        padding:20px 20px 10px;
+        margin:-30px 0 30px;
+    }
+    .selectedCriteria{
+        flex-wrap: wrap;
+    }
+    .smallCardContainer{
+        margin-bottom: 10px;
+    }
+    .cardsContainer{
+       margin-top:60px;
+    }
+    .card{
+        height: 260px;
+        flex-direction: column;
+        padding: 25px;
+        margin-bottom: 40px;
+    }
+    .featuredCard{
+        padding-left:20px;
+    }
+    .top {
+        grid-template-columns: 1fr;
+        grid-template-rows: 48px 42px 22px 44px;
+        align-items: center;
+        width: 100%;
+        margin-top:-50px;
+    }
+    
+    .top img {
+        width: 48px;
+        height: 48px;
+        grid-row: 1;
+    }
+    .name{
+        font-size: 13px;
+    }
+    h3{
+        font-size: 1em;
+    }
+    hr{
+        border:0;
+        border-top:var( --dark-grayish-cyan) solid 0.8px;
+        width:100%;
+    }
+    .bottom{
+        flex-wrap: wrap;
+        height:80px;
+    }
+    .sub{
+        font-size: 13px;
+    }
+    .sub span{
+        margin: 0 7px;
+    }
 }
